--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "bin": {
     "ccrawler": "bin/cli.js"
   },
-  "author": "",
+  "author": "jsanchesleao",
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.1",
